--- a/app/src/main/res/layout/activity_write.xml
+++ b/app/src/main/res/layout/activity_write.xml
@@ -72,7 +72,7 @@
                 android:layout_gravity="bottom"
                 android:background="@drawable/img_write_shadow"/>
 
-            <ImageView
+            <com.ssomcompany.ssomclient.widget.SsomNetworkImageView
                 android:id="@+id/img_profile"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
