--- a/app/src/main/res/values/apikey.xml
+++ b/app/src/main/res/values/apikey.xml
@@ -1,4 +1,5 @@
 <resources>
     <!--<string name="map_debug_key">AIzaSyBYMCAFKH4mLDTrkuGNslY0ccEHPLjgRAc</string>-->
     <string name="map_debug_key">AIzaSyDxR79-ULr-XbTxy4Ms8b2xU0gPTafAut0</string>
+    <string name="facebook_app_id">14</string>
 </resources>
