[common] 이미지 관련 전반적 수정 - bitmap memory 개선 - image cache 적용 - 이미지 로드 시 로테이션 적용 - 올사 기능 추가 - 채팅방 이미지 안보이는 문제 수정 - 채팅방에서 본인 이미지 추가 - 만남요청이 비정상적으로 동작하던 문제 수정

--- a/app/src/main/res/layout/activity_image_detail.xml
+++ b/app/src/main/res/layout/activity_image_detail.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="@android:color/black">
     
-    <com.android.volley.toolbox.NetworkImageView
+    <com.ssomcompany.ssomclient.widget.SsomNetworkImageView
         android:id="@+id/detail_image"
         android:layout_width="match_parent"
         android:layout_height="360dp"
