--- a/app/src/main/res/layout/fragment_chatting.xml
+++ b/app/src/main/res/layout/fragment_chatting.xml
@@ -55,6 +55,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="56dp"
-        android:paddingBottom="7dp"/>
+        android:layout_marginBottom="56dp" />
 </RelativeLayout>
