[채팅] 노티를 타고 들어온 경우 채팅 목록으로 이동함. - 채팅 목록 관련 개선 - action bar menu icon 디자인 변경

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -48,6 +48,13 @@
         <item name="android:singleLine">true</item>
     </style>
 
+    <style name="ssom_font_9_grayish_brown_single">
+        <item name="android:textSize">9sp</item>
+        <item name="android:textColor">@color/grayish_brown</item>
+        <item name="android:typeface">normal</item>
+        <item name="android:singleLine">true</item>
+    </style>
+
     <style name="ssom_font_12_pinkish_gray_single">
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/pinkish_gray</item>
