--- a/app/src/main/res/layout/view_ssom_action_bar.xml
+++ b/app/src/main/res/layout/view_ssom_action_bar.xml
@@ -58,54 +58,61 @@
             android:layout_height="wrap_content"/>
     </LinearLayout>
 
-    <TextView
+    <FrameLayout
         android:id="@+id/chat_layout"
-        style="@style/ssom_font_12_gray_warm"
-        android:layout_width="34dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="11dp"
-        android:layout_marginRight="6dp"
+        android:layout_width="31dp"
+        android:layout_height="29dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginRight="12dp"
         android:layout_alignParentRight="true"
-        android:drawableTop="@drawable/icon_chat"
-        android:drawablePadding="1.5dp"
-        android:gravity="center"
-        android:orientation="vertical" />
+        android:background="@drawable/top_message_gray">
+
+        <TextView
+            android:id="@+id/chat_count"
+            style="@style/ssom_font_12_white_single"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="4dp" />
+    </FrameLayout>
 
     <LinearLayout
         android:id="@+id/heart_layout"
-        android:layout_width="38.3dp"
+        android:layout_width="31dp"
         android:layout_height="wrap_content"
-        android:layout_marginRight="4.2dp"
-        android:layout_marginTop="11dp"
+        android:layout_marginRight="9dp"
+        android:layout_marginTop="12dp"
         android:layout_toLeftOf="@id/chat_layout"
         android:orientation="vertical">
 
         <FrameLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal">
 
-            <ImageView
-                android:id="@+id/img_heart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:src="@drawable/icon_heart"/>
-
             <TextView
-                android:id="@+id/heart_count"
-                style="@style/ssom_font_12_white"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp"
-                android:layout_gravity="center"/>
+                android:id="@+id/img_heart"
+                style="@style/ssom_font_12_white_single"
+                android:layout_width="27dp"
+                android:layout_height="24dp"
+                android:gravity="center"
+                android:background="@drawable/top_heart_gray"/>
+
+            <View
+                android:id="@+id/img_plus"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
+                android:layout_gravity="right"
+                android:layout_marginTop="2dp"
+                android:background="@drawable/top_plus_gray"/>
         </FrameLayout>
 
         <TextView
             android:id="@+id/heart_refill_time"
-            style="@style/ssom_font_12_gray_warm"
+            style="@style/ssom_font_9_grayish_brown_single"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="4dp"
             android:layout_gravity="center_horizontal"/>
     </LinearLayout>
 
