--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -222,6 +222,13 @@
         <item name="android:singleLine">true</item>
     </style>
 
+    <style name="ssom_font_14_main_black">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/main_black</item>
+        <item name="android:typeface">normal</item>
+        <item name="android:singleLine">true</item>
+    </style>
+
     <style name="ssom_font_14_pinkish_gray_two_selector">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@drawable/filter_button_selector</item>
