--- a/app/src/main/res/layout/ssom_chat_message_item.xml
+++ b/app/src/main/res/layout/ssom_chat_message_item.xml
@@ -150,23 +150,13 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/request_received_message"
+        android:id="@+id/request_message"
         style="@style/ssom_font_12_red_pink_single"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:gravity="center"
         android:background="#fcfcfc"
         android:text="@string/chat_message_request_received"
-        android:visibility="gone"/>
-
-    <TextView
-        android:id="@+id/request_sent_message"
-        style="@style/ssom_font_12_red_pink_single"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:gravity="center"
-        android:background="#fcfcfc"
-        android:text="@string/chat_message_request_sent"
         android:visibility="gone"/>
 
     <TextView
