--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,6 +22,13 @@
         <item name="android:windowAnimationStyle">@android:style/Animation</item>
     </style>
 
+    <style name="ssom_font_6_red_pink_single">
+        <item name="android:textSize">6sp</item>
+        <item name="android:textColor">@color/red_pink</item>
+        <item name="android:typeface">normal</item>
+        <item name="android:singleLine">true</item>
+    </style>
+
     <style name="ssom_font_9_pinkish_gray_single">
         <item name="android:textSize">9sp</item>
         <item name="android:textColor">@color/pinkish_gray</item>
@@ -273,6 +280,13 @@
         <item name="android:typeface">normal</item>
     </style>
 
+    <style name="ssom_font_16_red_pink_bold">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/red_pink</item>
+        <item name="android:typeface">normal</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="ssom_font_16_gray_warm">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/gray_warm</item>
@@ -319,6 +333,12 @@
         <item name="android:typeface">normal</item>
     </style>
 
+    <style name="ssom_font_18_555555">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/custom_555555</item>
+        <item name="android:typeface">normal</item>
+    </style>
+
     <style name="ssom_font_20_red_pink_bold">
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/red_pink</item>
@@ -343,6 +363,19 @@
     <style name="ssom_font_24_white_bold">
         <item name="android:textSize">24sp</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:typeface">normal</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="ssom_font_36_555555">
+        <item name="android:textSize">36sp</item>
+        <item name="android:textColor">@color/custom_555555</item>
+        <item name="android:typeface">normal</item>
+    </style>
+
+    <style name="ssom_font_36_red_pink_bold">
+        <item name="android:textSize">36sp</item>
+        <item name="android:textColor">@color/red_pink</item>
         <item name="android:typeface">normal</item>
         <item name="android:textStyle">bold</item>
     </style>
