--- a/app/src/main/res/layout/ssom_chat_list_item.xml
+++ b/app/src/main/res/layout/ssom_chat_list_item.xml
@@ -27,6 +27,12 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:src="@drawable/chat_profile_border_green" />
+
+        <ImageView
+            android:id="@+id/icon_ing"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:visibility="gone"/>
     </FrameLayout>
 
     <!-- left profile image layout End -->
