--- a/app/src/main/res/layout/ssom_list_item.xml
+++ b/app/src/main/res/layout/ssom_list_item.xml
@@ -22,6 +22,12 @@
             android:layout_gravity="center_vertical"/>
 
         <ImageView
+            android:id="@+id/icon_ing"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:visibility="gone"/>
+
+        <ImageView
             android:id="@+id/icon_list_r"
             android:layout_width="80dp"
             android:layout_height="70dp"
