--- a/app/src/main/res/layout/fragment_chatting.xml
+++ b/app/src/main/res/layout/fragment_chatting.xml
@@ -20,7 +20,8 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:layout_marginLeft="23dp"
-            android:inputType="text"
+            android:inputType="text|textNoSuggestions"
+            android:autoLink="none"
             android:lines="4"
             android:maxLines="4"
             android:hint="@string/chat_message_hint"
