--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="custom_555555">#555555</color>
     <color name="custom_666666">#666666</color>
     <color name="custom_e5e5e5">#e5e5e5</color>
+    <color name="custom_c3c3c3">#c3c3c3</color>
     <color name="custom_999999">#999999</color>
     <color name="custom_4d4d4d">#4d4d4d</color>
     <color name="custom_979797">#979797</color>
