--- a/app/src/main/res/layout/ssom_chat_list_item.xml
+++ b/app/src/main/res/layout/ssom_chat_list_item.xml
@@ -4,6 +4,7 @@
     android:id="@+id/item_layout"
     android:layout_width="match_parent"
     android:layout_height="74dp"
+    android:minHeight="74dp"
     android:background="@color/white">
 
     <!-- left profile image layout Start -->
