[결함] 결함 수정 - 백그라운드 진입 시 노티바를 눌러도 앱이 올라오지 않는 문제 - 만남 중인 게시물 만남 중 표시 보완 - 채팅 중인 상대의 게시물은 채팅 보기 로 변경    이 경우 클릭 시 상대방의 채팅룸으로 이동 - 배지 컨트롤 문제로 인해 배지 삭제 - 채팅방을 켜둔 채로 앱을 백그라운드로 내리거나, 전원버튼으로 화면을 끈 경우 채팅메시지가 갱신되지 않던 문제 수정 - 그 외 기타사항 보완

--- a/app/src/main/res/layout/ssom_list_item.xml
+++ b/app/src/main/res/layout/ssom_list_item.xml
@@ -25,6 +25,8 @@
             android:id="@+id/icon_ing"
             android:layout_width="64dp"
             android:layout_height="64dp"
+            android:layout_marginLeft="3dp"
+            android:layout_gravity="center_vertical"
             android:visibility="gone"/>
 
         <ImageView
