--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -17,6 +17,12 @@
         android:layout_height="match_parent"
         android:background="@color/white"/>
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/ssom_action_bar"
+        android:src="@drawable/map_shadow"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="55dp"
@@ -35,6 +41,7 @@
 
         <TextView
             style="@style/ssom_font_23_white"
+            android:id="@+id/tv_distance"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"/>
