[결함] 트렐로 결함 수정 - 만남요청 중 bg 분홍색으로 변경 - 챗방 나올 때 시간 갱신 API 수정 - 채팅 리스트 표시목록을 거리순으로 조회 - 채팅방 생성 시 내 위치정보 추가 - 상대가 나간 챗방의 포스트에 다시 쏨타기 했을때 말걸 수 있게 수정 (근데 서버에서 에러가 발생) - 만나는 중 상태 변경... 이건 재정의 필요

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="red">#e60000</color>
+    <color name="pink_10">#19ec344b</color>
     <color name="green_blue">#00b48f</color>
     <color name="red_pink">#ed344b</color>
     <color name="gray_warm">#9b9b9b</color>
