--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -9,7 +9,7 @@
     <RelativeLayout
         android:id="@+id/layout_profile"
         android:layout_width="match_parent"
-        android:layout_height="173dp">
+        android:layout_height="wrap_content">
 
         <View
             android:layout_width="match_parent"
@@ -22,6 +22,7 @@
             android:layout_height="100dp"
             android:layout_marginTop="22dp"
             android:layout_marginLeft="15dp"
+            android:layout_marginBottom="26dp"
             android:background="@drawable/drawer_bg_today_photo">
 
             <View
@@ -43,33 +44,22 @@
                 android:background="@drawable/drawer_icon_camera"/>
         </FrameLayout>
 
-        <RelativeLayout
-            android:id="@+id/login_email_layout"
-            android:layout_below="@id/today_photo"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="14dp"
-            android:paddingBottom="17dp"
-            android:paddingLeft="17dp"
-            android:paddingRight="16dp">
+            android:layout_below="@id/today_photo"
+            android:orientation="vertical">
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginBottom="7dp"
+                android:background="@color/custom_e5e5e5"/>
 
-            <TextView
-                android:id="@+id/tv_email_or_description"
-                style="@style/ssom_font_14_gray_warm_single"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"/>
-
-            <TextView
-                android:id="@+id/tv_login_or_logout"
-                style="@style/ssom_font_13_main_black_single"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@id/tv_email_or_description"
-                android:layout_alignParentRight="true"
-                android:text="@string/logout"/>
-        </RelativeLayout>
-
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/custom_e5e5e5"/>
+        </LinearLayout>
     </RelativeLayout>
 
     <LinearLayout
