[UI변경] 홈 UI 개편 1차 작업 tablayout 구성 완료

--- a/app/src/main/res/layout/fragment_ssom_list.xml
+++ b/app/src/main/res/layout/fragment_ssom_list.xml
@@ -12,7 +12,7 @@
         <!--android:layout_alignParentBottom="true"-->
         <!--android:src="@drawable/bg_list_bot"/>-->
     <ListView android:id="@android:id/list" android:layout_width="match_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="match_parent"
         android:divider="@drawable/post_list_divider"/>
 
     <TextView android:id="@android:id/empty" android:layout_width="match_parent"
