--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,96 +12,36 @@
         android:layout_height="match_parent"
         android:background="@color/white">
 
-        <LinearLayout
-            android:id="@+id/toolbar_layout"
+        <com.ssomcompany.ssomclient.widget.SsomActionBarView
+            android:id="@+id/ssom_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="35dp"
+            android:background="@color/white"
+            app:popupTheme="@style/AppTheme"
+            app:contentInsetLeft="0dp"
+            app:contentInsetStart="0dp" />
+        
+        <android.support.design.widget.TabLayout
+            android:id="@+id/bottom_tab"
+            android:layout_width="match_parent"
+            android:layout_height="46dp"
+            app:tabIndicatorHeight="0dp"
+            app:tabMode="fixed"
+            app:tabPadding="0dp"
+            android:layout_alignParentBottom="true"/>
 
-            <include layout="@layout/ssom_toolbar"/>
-
-            <!--<android.support.design.widget.TabLayout-->
-                <!--android:id="@+id/tab_layout"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:minHeight="53dp"-->
-                <!--app:tabIndicatorHeight="3dp"-->
-                <!--app:tabGravity="fill">-->
-
-                <!--<android.support.design.widget.TabItem-->
-                    <!--style="@style/ssom_font_16_gray_warm"-->
-                    <!--android:layout_width="180dp"-->
-                    <!--android:layout_height="50dp"-->
-                    <!--android:text="@string/title_tab_give"/>-->
-
-                <!--<android.support.design.widget.TabItem-->
-                    <!--style="@style/ssom_font_16_gray_warm"-->
-                    <!--android:layout_width="180dp"-->
-                    <!--android:layout_height="50dp"-->
-                    <!--android:text="@string/title_tab_take"/>-->
-
-            <!--</android.support.design.widget.TabLayout>-->
-
-            <LinearLayout
-                android:id="@+id/tab_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:orientation="horizontal">
-
-                <FrameLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:id="@+id/tab_give_tv"
-                        style="@style/ssom_font_16_green_blue"
-                        android:layout_width="180dp"
-                        android:layout_height="50dp"
-                        android:gravity="center"
-                        android:text="@string/title_tab_give"
-                        />
-
-                    <ImageView
-                        android:id="@+id/tab_give_bottom_bar"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="bottom"
-                        android:src="@drawable/tab_bottom_bar_g"/>
-                </FrameLayout>
-
-                <FrameLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:id="@+id/tab_take_tv"
-                        style="@style/ssom_font_16_gray_warm"
-                        android:layout_width="180dp"
-                        android:layout_height="50dp"
-                        android:gravity="center"
-                        android:text="@string/title_tab_take"
-                        />
-
-                    <ImageView
-                        android:id="@+id/tab_take_bottom_bar"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="bottom"
-                        android:src="@drawable/tab_bottom_bar_r"
-                        android:visibility="gone"/>
-                </FrameLayout>
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <FrameLayout android:id="@+id/container"
+        <com.ssomcompany.ssomclient.widget.SwipeLockViewPager
+            android:id="@+id/main_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/toolbar_layout"/>
+            android:layout_below="@id/ssom_toolbar"
+            android:layout_above="@id/bottom_tab"/>
 
         <!-- As the main content view, the view below consumes the entire
              space available using match_parent in both dimensions. -->
         <FrameLayout
-            android:layout_below="@id/toolbar_layout"
+            android:layout_below="@id/ssom_toolbar"
+            android:layout_above="@id/bottom_tab"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -115,7 +55,8 @@
 
         <FrameLayout
             android:id="@+id/top_container"
-            android:layout_below="@id/toolbar_layout"
+            android:layout_below="@id/ssom_toolbar"
+            android:layout_above="@id/bottom_tab"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
